--- a/Practice_Projects/Tribute_Page.HTML
+++ b/Practice_Projects/Tribute_Page.HTML
@@ -20,3 +20,22 @@
    </main>
   </body>
  </html>
+
+ /* CSS */
+
+ img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: auto;
+}
+
+h1 {
+  text-align: center;
+}
+
+p {
+  text-align: center;
+  font-family: Verdana;
+  font-size: 12px;
+}
